# GenieArchive---Backend

./: .gitignore  .pre-commit-config.yaml  Analytical_ridge_regression.pkl  Dockerfile.data  Dockerfile.dbupdater  Dockerfile.root  Dockerfile.temp  Emotional_ridge_regression.pkl  Go-Getter_ridge_regression.pkl  Innovator_ridge_regression.pkl  Intuitive_ridge_regression.pkl  README.md  Social_ridge_regression.pkl  Thorough_ridge_regression.pkl  apollo.py  auth0-public.cert  clean_events_stream.py  enrich_streamlit.py  genie-meeting-bot.json  last_sql_changes.py  linkedin_scrape.py  main.py  postgres_connector.py  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  salesforce-genie-private.pem  salesforce-genie-public.pem  scaler.pkl  start_api.py  start_consumers.py  start_mock_api.py  start_test_api.py  start_tests.py  trait_means.pkl
API_Gateway/: Api_Manager.py  start_api.py
ai/: models.py  personality_indicators.py
api/: api_manager.py
api_gateway/: api_Manager.py  start_api.py
app/: __init__.py  start_api.py
common/: genie_logger.py
data/: apollo_consumer.py  company_consumer.py  emails_manager.py  facebook_wrap.py  hunter_domain_consumer.py  hunter_domain_finder.py  meetings_consumer.py  news_consumer.py  news_scraper.py  pdl.py  pdl_consumer.py  person.py  person_api.py  person_langsmith.py  personality_indicators.py  persons_manager.py  profile_params_consumer.py  sales_material_consumer.py  salesforce_consumer.py  slack_consumer.py  stock_api.py  task_manager.py  tasks_manager.py
migrations/: 20241119_add_criteria_column_to_tenants_profiles.py  20241126_add_criteria_column_to_profiles.py  20241127_add_action_item_to_tenant_profiles.py  20241129_alter_tenant_profiles_to_profile_uuid_not_unique.py  20241203_add_fake_to_meetings.py  20241204_add_seen_to_user_badges.py  20241208_add_last_earned_at_to_user_badges.py  20241208_rename_column_to_first_earned_at.py  20241212_insert_files_badges.py  20241215_add_status_to_persons_table.py  20250104_create_and_add_users_from_tenants.py  20250105_add_column_user_id_to_ownership.py  20250105_add_user_id_column_to_meetings.py  20250105_copy_tenant_profiles_to_create_user_profiles.py  20250106_add_user_id_to_statuses.py  20250107_add_user_id_to_file_upload_repo.py  20250107_add_user_id_to_stats.py  20250112_add_profile_category_to_profiles.py  20250210_create_artifact_scores_table.py  20250210_create_artifacts_tables.py  (+2 more)
test/: data_test.py  (+6 more)
(+214 files in other folders)
